compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__assert_on_impossible_to_reach_integer_segment.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4509
expression: "\npub fn main(x) {\n  let assert <<1, -1, 2, -3>> = x\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  let assert <<1, -1, 2, -3>> = x
}

----- WARNING
warning: Assertion that will always fail
  ┌─ /src/warning/wrn.gleam:3:14
  │
3 │   let assert <<1, -1, 2, -3>> = x
  │              ^^^^^^^^^^^^^^^^
  │                   │      │
  │                   │      A 1 byte unsigned integer will never match this value
  │                   A 1 byte unsigned integer will never match this value

We can tell from the code above that the value will never match this
pattern and that this code will always crash.

Either change the pattern or use `panic` to unconditionally fail.
