compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__assert_on_inferred_variant.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3180
expression: "\ntype Wibble {\n  Wibble(w: Int)\n  Wobble(w: String)\n}\n\npub fn main() {\n  let assert Wobble(w) = Wibble(10)\n  w\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
  Wibble(w: Int)
  Wobble(w: String)
}

pub fn main() {
  let assert Wobble(w) = Wibble(10)
  w
}


----- WARNING
warning: Assertion that will always fail
  ┌─ /src/warning/wrn.gleam:8:14
  │
8 │   let assert Wobble(w) = Wibble(10)
  │              ^^^^^^^^^

We can tell from the code above that the value will never match this
pattern and that this code will always crash.

Either change the pattern or use `panic` to unconditionally fail.
