compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__bit_array_negative_truncated_segment.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3313
expression: "\npub fn main() {\n  // -5 in 2's complement is 1111...111011\n  // so if we truncate it to its first 3 bits we\n  // get 011, which is positive 3!\n  <<-5:size(3)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  // -5 in 2's complement is 1111...111011
  // so if we truncate it to its first 3 bits we
  // get 011, which is positive 3!
  <<-5:size(3)>>
}


----- WARNING
warning: Truncated bit array segment
  ┌─ /src/warning/wrn.gleam:6:5
  │
6 │   <<-5:size(3)>>
  │     ^^ You can safely replace this with 3

This segment is 3 bits long, but -5 doesn't fit in that many bits. It would
be truncated by taking its first 3 bits, resulting in the value 3.
