compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__bit_array_negative_truncated_segment_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3327
expression: "\npub fn main() {\n  <<-200:size(8)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<-200:size(8)>>
}


----- WARNING
warning: Truncated bit array segment
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │   <<-200:size(8)>>
  │     ^^^^ You can safely replace this with 56

This segment is 1 byte long, but -200 doesn't fit in that many bytes. It
would be truncated by taking its first byte, resulting in the value 56.
