compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__bit_array_truncated_segment.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3197
expression: "\npub fn main() {\n  <<12:size(1)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<12:size(1)>>
}


----- WARNING
warning: Truncated bit array segment
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │   <<12:size(1)>>
  │     ^^ You can safely replace this with 0

This segment is 1 bit long, but 12 doesn't fit in that many bits. It would
be truncated by taking its first bit, resulting in the value 0.
