compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__bit_array_truncated_segment_in_bytes.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3222
expression: "\npub fn main() {\n  <<258:size(8)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<258:size(8)>>
}


----- WARNING
warning: Truncated bit array segment
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │   <<258:size(8)>>
  │     ^^^ You can safely replace this with 2

This segment is 1 byte long, but 258 doesn't fit in that many bytes. It
would be truncated by taking its first byte, resulting in the value 2.
