compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__bit_array_truncated_segment_in_bytes_2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3249
expression: "\npub fn main() {\n  <<65_537:size(2)-unit(8)>>\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  <<65_537:size(2)-unit(8)>>
}


----- WARNING
warning: Truncated bit array segment
  ┌─ /src/warning/wrn.gleam:3:5
  │
3 │   <<65_537:size(2)-unit(8)>>
  │     ^^^^^^ You can safely replace this with 1

This segment is 2 bytes long, but 65537 doesn't fit in that many bytes. It
would be truncated by taking its first 2 bytes, resulting in the value 1.
