compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__bool_literals_redundant_comparison.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4204
expression: "pub fn main() { True == False }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { True == False }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { True == False }
  │                 ^^^^^^^^^^^^^ This is always `False`

This comparison is redundant since it always fails.
